fix(review): Address code review findings for security issues and cleanup

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -64,8 +64,8 @@ development_status:
   epic-2-retrospective: optional
 
   # Epic 3: 授权与权限控制
-  epic-3: backlog
-  3-1-preauthorize-support: backlog
+  epic-3: in-progress
+  3-1-preauthorize-support: review
   3-2-role-permission-data-model: backlog
   3-3-permission-evaluation-service: backlog
   3-4-role-management-api: backlog
